# strena

./: Cargo.toml  README.md  bors.toml
.github/workflows/: ci.yaml
LICENSE/: MIT
src/: iter.rs  lib.rs  par_iter.rs
